# hxournal-idmap-client

./: hxournal-idmap-client.cabal
exe/: hxournal-idmap-client.hs
lib/Database/HXournal/IDMap/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
lib/Database/HXournal/IDMap/Client/Communication/: Common.hs  Multipart.hs
